Update README.md with detailed tool descriptions and deployment guide

--- a/package.json
+++ b/package.json
@@ -3,18 +3,48 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -H 0.0.0.0",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -H 0.0.0.0",
     "lint": "eslint"
   },
   "dependencies": {
+    "@bitcoinerlab/secp256k1": "^1.2.0",
+    "@solana/web3.js": "^1.98.4",
+    "adm-zip": "^0.5.16",
+    "axios": "^1.13.2",
+    "bip32": "^5.0.0",
+    "bip39": "^3.1.0",
+    "bitcoinjs-lib": "^7.0.0",
+    "bs58": "^6.0.0",
+    "buffer": "^6.0.3",
+    "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
+    "ecpair": "^3.0.0",
+    "ethers": "^6.15.0",
+    "framer-motion": "^12.23.24",
+    "http-proxy-agent": "^7.0.2",
+    "https-proxy-agent": "^7.0.6",
+    "imap-simple": "^5.1.0",
+    "ip2location-nodejs": "^9.7.0",
+    "lucide-react": "^0.554.0",
+    "mailparser": "^3.9.0",
     "next": "16.0.3",
+    "next-themes": "^0.4.6",
+    "otpauth": "^9.4.1",
+    "puppeteer-core": "^24.31.0",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "socks-proxy-agent": "^8.0.5",
+    "tailwind-merge": "^3.4.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/adm-zip": "^0.5.7",
+    "@types/crypto-js": "^4.2.2",
+    "@types/imap-simple": "^4.2.10",
+    "@types/mailparser": "^3.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
